--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -g set-titles on
 set -g base-index 1
 set -g history-limit 5000
+setw -g mouse on
 
 # Vi style navigation
 bind h select-pane -L
@@ -10,3 +11,4 @@ bind l select-pane -R
 
 set -g status-keys vi
 setw -g mode-keys vi
+set-option -g default-command "reattach-to-user-namespace -l bash"
