tmux settings, colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,24 @@
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Switch between different panels, to vim style
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Quickly select the panel
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Adjust the panel size
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# tmux has a delay to facilitate user key combinations, the default a bit long. Set here for 1 second
+set -s escape-time 1
 
 ######################
 ### DESIGN CHANGES ###
@@ -57,23 +70,19 @@ set-option -g bell-action none
 
 set -g default-terminal "screen-256color"
 
-# The modes {
+# The modes
 setw -g clock-mode-colour colour135
 setw -g mode-attr bold
 setw -g mode-fg colour196
 setw -g mode-bg colour238
 
-# }
-# The panes {
-
+# The panes
 set -g pane-border-bg colour235
 set -g pane-border-fg colour238
 set -g pane-active-border-bg colour236
 set -g pane-active-border-fg colour51
 
-# }
-# The statusbar {
-
+# The statusbar
 set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
@@ -97,11 +106,9 @@ setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
-# }
-# The messages {
-
+# The messages 
 set -g message-attr bold
 set -g message-fg colour232
 set -g message-bg colour166
 
-# }
+
